--- a/QR.css
+++ b/QR.css
@@ -7,22 +7,20 @@ body {
 	text-align:center;
 }
 .first-back {
+	margin:50px auto;
+	max-width:1200px;
+	padding:50px;
 	background-color:lightblue;
 	box-shadow: 0 0 2px 3px gray;
-	margin:50px auto;
-	width:1300px;
-	height:1000px;
-	padding:50px;
 	border-radius:10px;
 }
 .second-back {
-	background-color:white;
-	width:330px;
-	height:510px;
 	margin:200px auto;
+	max-width:340px;
+	background-color:white;
+	box-shadow: 0 0 2px 3px gray;
 	border-radius:20px;
 	border:1px solid lightblue;
-	box-shadow: 0 0 2px 3px gray;
 }
 img {
 	display:block;
@@ -30,7 +28,7 @@ img {
 	margin:20px auto;
 }
 .first-p {
-	font-weight:bold;
+	font-weight:900;
 	font-size:25px;
 	padding:6px;
 }
@@ -39,4 +37,17 @@ img {
 	color:hsl(212, 45%, 10%);
 	font-size:15px;
 	font-weight:500;
+}
+a:link, a:visited {
+	color:hsl(218, 44%, 22%);
+	display:inline-block;
+}
+a:hover, a:active {
+	color:black;
+	text-decoration:none;
+	font-weight:700;
+}
+footer {
+	font-size:15px;
+	font-weight:450;
 }
